# r25hw_kongjp2024

./: .gitignore  .gitmodules  README  README.md  jackal.urdf.xacro
HW2/: README.md
HW2/figure8_feedback/: metadata.yaml
HW2/mobile_robotics_interfaces/msg/: Transform2DStamped.msg
HW2/mobile_robotics_odom/: CMakeLists.txt  package.xml
HW2/mobile_robotics_odom/launch/: hw2_odom.launch.py
HW2/mobile_robotics_odom/src/: odometry.cpp  pose.cpp
HW2/odom/: metadata.yaml  odom_0.mcap
HW2/pose/: metadata.yaml  pose_0.mcap
HW2/pose2d_to_3d/: CMakeLists.txt  package.xml
HW2/pose2d_to_3d/src/: pose2D_to_3D_node.cpp
HW2/speed/: metadata.yaml  speed_0.mcap
HW3/figure8_tracking/: figure8_tracking.db3  metadata.yaml  motive_tracking_pose.tum
HW3/gmapping/: gmapping_0.mcap  map_to_base_link_pose.tum  metadata.yaml
HW3/icp/: icp_0.mcap  icp_pose.tum  metadata.yaml
HW3/pose3D/: metadata.yaml  pose3D.tum  pose3D_0.mcap
HW3/report/: main.tex
HW3/task2/: CMakeLists.txt  package.xml  qos_best_effort.rviz
HW3/task2/launch/: hw3_gmapping.launch  hw3_gmapping.launch.py
HW3/task2/src/: tf_pose.cpp
HW3/task3_icp/: CMakeLists.txt  package.xml
HW3/task3_icp/config/: icp_visualization.rviz
HW3/task3_icp/launch/: hw3_icp.launch.py
HW3/task3_icp/src/: icp_scan_matcher.cpp
figure8_feedback/: figure8_feedback.db3
mobile_robotics_interfaces/: CMakeLists.txt  package.xml
mobile_robotics_interfaces/msg/: SpeedStamped.msg
mobile_robotics_odom/: CMakeLists.txt  package.xml
